Fixed mobile menu alignment

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -35,6 +35,7 @@
 .navigation__inner {
   display: flex;
   align-items: center;
+  position: relative;
   padding: 0.6em 1em;
 
   @include break {
@@ -45,7 +46,7 @@
 .navigation__mobile {
   display: flex;
   font-size: 1.5em;
-  margin-left: -1em;
+  position: absolute;
   align-items: center;
   color: map-get($colors, white);
   cursor: pointer;
